--- a/src/EducationalPlans.Domain/EducationalPlans.Domain.csproj
+++ b/src/EducationalPlans.Domain/EducationalPlans.Domain.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ВидыДеятельности.cs" />
     <Compile Include="ВыбранныеВидыРабот.cs" />
