--- a/src/PersonnelSTU.Data/PersonnelSTU.Data.csproj
+++ b/src/PersonnelSTU.Data/PersonnelSTU.Data.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\FacultyRepository.cs" />
     <Compile Include="Repositories\GroupRepository.cs" />
+    <Compile Include="Repositories\PersonnelSTUEntityRepository.cs" />
     <Compile Include="Repositories\PersonRepository.cs" />
     <Compile Include="Repositories\SpecialtyRepository.cs" />
     <Compile Include="Repositories\StudentStateRepository.cs" />
